<resources>
    <string name="app_name">ESD</string>
    <string name="txt_plzwait">Please wait &#8230;</string>
    <string name="sb_text_1">iː</string>
    <string name="sb_text_2">ɪ</string>
    <string name="sb_text_3">e</string>
    <string name="sb_text_4">æ</string>
    <string name="sb_text_5">ʌ</string>
    <string name="sb_text_6">ɑː</string>
    <string name="sb_text_7">ɒ</string>
    <string name="sb_text_8">ɔː</string>
    <string name="sb_text_9">ʊ</string>
    <string name="sb_text_10">uː</string>
    <string name="sb_text_11">ɜː</string>
    <string name="sb_text_12">ə</string>
    <string name="sb_text_13">ei</string>
    <string name="sb_text_14">aɪ</string>
    <string name="sb_text_15">ɔɪ</string>
    <string name="sb_text_16">aʊ</string>
    <string name="sb_text_17">əʊ</string>
    <string name="sb_text_18">ɪə</string>
    <string name="sb_text_19">eə</string>
    <string name="sb_text_20">ʊə</string>
    <string name="sb_text_21">p</string>
    <string name="sb_text_22">b</string>
    <string name="sb_text_23">t</string>
    <string name="sb_text_24">d</string>
    <string name="sb_text_25">k</string>
    <string name="sb_text_26">g</string>
    <string name="sb_text_27">s</string>
    <string name="sb_text_28">z</string>
    <string name="sb_text_29">ʃ</string>
    <string name="sb_text_30">ʒ</string>
    <string name="sb_text_31">tʃ</string>
    <string name="sb_text_32">dʒ</string>
    <string name="sb_text_33">f</string>
    <string name="sb_text_34">v</string>
    <string name="sb_text_35">w</string>
    <string name="sb_text_36">j</string>
    <string name="sb_text_37">h</string>
    <string name="sb_text_38">θ</string>
    <string name="sb_text_39">ð</string>
    <string name="sb_text_40">m</string>
    <string name="sb_text_41">n</string>
    <string name="sb_text_42">ŋ</string>
    <string name="sb_text_43">l</string>
    <string name="sb_text_44">r</string>
    <string name="example">Example:</string>
    <string name="vowel1">Khi phát âm âm /i:/:
\n- Lưỡi được nâng lên cao
\n- Đầu lưỡi ở vị trí cao nhất
\n- Miệng mở rộng sang 2 bên giống như khi cười
\n- Phát âm kéo dài hơn so với nguyên âm ngắn</string>
    <string name="vowel2">Âm /ɪ/ được phát âm tương tự âm /i:/ nhưng:
\n- Lưỡi sẽ được hạ thấp hơn
\n- Đầu lưỡi cũng hạ thấp hơn một chút
\n- Miệng bớt mở rộng sang 2 bên hơn
\n- Phát âm rất ngắn</string>
    <string name="vowel3">So với âm /ɪ/, khi phát âm nguyên âm ngắn /e/:
\n- Lưỡi sẽ được hạ thấp hơn
\n- Phần sau lưỡi cũng hạ thấp hơn một chút
\n- Miệng mở rộng sang hai bên hơn một chút
\n-	Phát âm rất ngắn</string>
    <string name="vowel4">So với âm /e/, khi phát âm nguyên âm ngắn /æ/:
\n-	Lưỡi sẽ được hạ thấp hơn
\n-	Phần sau lưỡi cũng hạ xuống rất thấp
\n-	Miệng mở rộng hơn rất nhiều
\n-	Phát âm rất ngắn</string>
    <string name="vowel5">So với nguyên âm dài /ɑ:/, khi phát âm nguyên âm ngắn /ʌ/:
\n-	Lưỡi sẽ nâng cao hơn một chút
\n-	Phần sau lưỡi cũng nâng cao hơn
\n-	Miệng thu hẹp hơn
\n-	Phát âm rất ngắn</string>
    <string name="vowel6">Khi phát âm nguyên âm dài /ɑ:/:
\n-	Lưỡi sẽ được hạ thấp hơn một chút
\n-	Phần sau lưỡi hạ thấp
\n-	Miệng mở rộng
\n-	Phát âm kéo dài hơn so với một nguyên âm ngắn</string>
    <string name="vowel7">So với nguyên âm dài /ɔ:/, khi phát âm nguyên âm ngắn /ɒ/:
\n-	Lưỡi hạ thấp hơn một chút
\n- Đầu lưỡi cao hơn một chút
\n-	Miệng chỉ hơi tròn môi
\n-	Phát âm rất ngắn</string>
    <string name="vowel8">Khi phát âm nguyên âm dài /ɔ:/:
\n- Lưỡi cao trung bình
\n- Đầu lưỡi hạ thấp
\n- Tròn môi
\n-	Phát âm kéo dài hơn so với một nguyên âm ngắn
</string>
    <string name="vowel9">Âm /ʊ/ được phát âm tương tự âm /u:/ nhưng:
\n- Lưỡi hạ thấp hơn một chút
\n- Phần sau lưỡi thấp hơn một chút
\n- Hơi tròn môi
\n- Phát âm rất ngắn</string>
    <string name="vowel10">Khi phát âm nguyên âm dài /u:/:
\n- Lưỡi được nâng cao
\n- Đầu lưỡi thấp, phần sau của lưỡi nâng lên cao nhất
\n- Khẩu hình môi tròn
\n- Phát âm rõ và kéo dài hơn so với một nguyên âm ngắn</string>
    <string name="vowel11">Khi phát âm nguyên âm dài /ɜ:/:
\n- Lưỡi có độ cao trung bình trong miệng
\n- Lưỡi thả lỏng tự nhiên
\n- Miệng hơi mở và tự nhiên
\n-	Phát âm kéo dài hơn so với một nguyên âm ngắn</string>
    <string name="vowel12">So với nguyên âm dài /ɜ:/, nguyên âm ngắn /ə/ phát âm tương tự:
\n-	Lưỡi cao trung bình
\n-	Lưỡi thả lỏng tự nhiên
\n-	Miệng mở một chút
\n-	Phát âm rất ngắn</string>
    <string name="vowel13">Khi phát âm nguyên âm đôi /eɪ/, cần chuyển từ phát âm âm /e đến phát âm âm /ɪ/:
\n-	Lưỡi di chuyển lên trên
\n-	Môi chuyển từ hơi mở rộng đến mở sang hai bên
\n-	Phần âm /e/ được phát âm dài và to hơn so với phần âm /ɪ/</string>
    <string name="vowel14">Khi phát âm nguyên âm đôi /aɪ/, cần chuyển từ phát âm âm /a:/ đến phát âm âm /ɪ/:
\n-	Lưỡi nâng lên và hơi đẩy ra trước
\n-	Môi chuyển từ mở rộng đến hơi mở sang hai bên
\n-	Phần âm /a:/ được phát âm dài và to hơn so với phần âm /ɪ/</string>
    <string name="vowel15">Khi phát âm nguyên âm đôi /ɔɪ/, cần chuyển từ phát âm âm /ɔ:/ đến phát âm âm /ɪ/:
\n-	Lưỡi nâng lên và hơi đẩy ra trước
\n-	Môi chuyển từ mở rộng đến hơi mở sang hai bên
\n-	Phần âm /ɔ:/ được phát âm dài và to hơn so với phần âm /ɪ/</string>
    <string name="vowel16">Khi phát âm nguyên âm đôi /aʊ/, cần chuyển từ phát âm âm /ɑ:/ đến phát âm âm /ʊ/:
\n-	Lưỡi nâng cao hơn
\n-	Môi chuyển từ hơi mở đến hơi tròn môi
\n-	Phần âm /ɑ:/ được phát âm dài và to hơn so với phần âm /ʊ/</string>
    <string name="vowel17">Khi phát âm nguyên âm đôi /əʊ/, cần chuyển từ phát âm âm /ə/ đến phát âm âm /ʊ/:
\n-	Lưỡi nâng lên và lùi về phía sau
\n-	Môi chuyển từ hơi mở đến hơi tròn môi
\n-	Phần âm /ə/ được phát âm dài và to hơn so với phần âm /ʊ/</string>
    <string name="vowel18">Khi phát âm nguyên âm đôi /ɪə/, cần chuyển từ phát âm âm /ɪ/ đến phát âm âm /ə/:
\n-	Lưỡi hạ thấp hơn và lùi về phía sau
\n-	Môi chuyển từ hơi mở sang hai bên đến mở tự nhiên
\n-	Phần âm /ɪ/ được phát âm dài và to hơn so với phần âm /ə/</string>
    <string name="vowel19">Khi phát âm nguyên âm đôi /eə/, cần chuyển từ phát âm âm /e/ đến phát âm âm /ə/:
\n-	Lưỡi lùi về phía sau
\n-	Môi chuyển từ mở hơi rộng sang mở trung bình
\n-	Phần âm /e/ được phát âm dài và to hơn so với phần âm /ə/</string>
    <string name="vowel20">Khi phát âm nguyên âm đôi /ʊə/, cần chuyển từ phát âm âm /ʊ/ đến phát âm âm /ə/:
\n-	Lưỡi hạ thấp và hướng ra phía trước
\n-	Môi chuyển từ hơi tròn đến hơi mở sang hai bên
\n-	Hơi tròn môi
\n-	Phần âm /ʊ/ được phát âm dài và to hơn so với phần âm /ə/</string>
    <string name="vowel21">Khi phát âm phụ âm /p/
, các bạn cần:
\n-	Dùng hai môi chặn luồng khí trong miệng, ngạc mềm nâng lên
\n-	Bật mạnh luồng khí ra khỏi miệng
\n-	Không làm rung dây thanh trong cổ họng khi phát âm</string>
    <string name="vowel22">Phụ âm /b/
 được phát âm tương tự như phụ âm /p/
:
\n-	Dùng hai môi chặn luồng khí trong miệng, ngạc mềm được nâng lên
\n-	Bật luồng khí ra khỏi miệng (yếu hơn so với âm /p/
)
\n- Làm rung dây thanh trong cổ họng khi phát âm
</string>
    <string name="vowel23">Khi phát âm phụ âm /t/
, các bạn cần:
\n-	Đặt mặt lưỡi dưới nướu/lợi hàm trên để chặn luồng khí trong miệng, ngạc mềm được nâng lên
\n-	Bật mạnh luồng khí ra khỏi miệng
\n-	Không làm rung dây thanh trong cổ họng khi phát âm</string>
    <string name="vowel24">Khi phát âm phụ âm /d/
, các bạn cần:
\n-	Đặt mặt lưỡi dưới nướu/lợi hàm trên để chặn luồng khí trong miệng, ngạc mềm được nâng lên
\n-	Bật mạnh luồng khí ra khỏi miệng, nhưng không mạnh bằng âm /t/
\n-	Làm rung dây thanh trong cổ họng khi phát âm</string>
    <string name="vowel25">Khi phát âm phụ âm /k/
, các bạn cần:
\n-	Nâng phần sau của lưỡi lên chạm ngạc mềm để chặn luồng khí trong miệng
\n-	Bật mạnh luồng khí ra khỏi miệng
\n-	Không làm rung dây thanh trong cổ họng khi phát âm</string>
    <string name="vowel26">Khi phát âm phụ âm /g/
, các bạn cần:
\n-	Nâng phần sau của lưỡi lên chạm ngạc mềm để chặn luồng khí trong miệng
\n-	Bật luồng khí ra khỏi miệng (yếu hơn so với âm /k/)
\n-	Làm rung dây thanh trong cổ họng khi phát âm</string>
    <string name="vowel27">Khi phát âm phụ âm /s/
, các bạn cần:
\n-	Để mặt lưỡi chạm nhẹ vào lợi hàm trên, ngạc mềm nâng lên
\n-	Đẩy luồng khí thoát ra giữa mặt lưỡi và lợi hàm trên sao cho các bạn nghe thấy tiếng luồng khí thoát ra
\n-	Không làm rung dây thanh trong cổ họng</string>
    <string name="vowel28">Khi phát âm phụ âm /z/
:
\n-	Các bạn để mặt lưỡi chạm nhẹ vào lợi hàm trên, ngạc mềm nâng lên
\n-	Sau đó, đẩy luồng khí thoát ra giữa mặt lưỡi và lợi hàm trên sao cho các bạn nghe thấy tiếng luồng khí thoát ra (không mạnh bằng âm /s/)
\n-	Làm rung dây thanh trong cổ họng khi phát âm</string>
    <string name="vowel29">Khi phát âm phụ âm /ʃ/
, các bạn cần:
\n-	Để mặt lưỡi chạm nhẹ vào ngay sau lợi hàm trên, nâng cả phần trước của lưỡi lên cao, và nâng ngạc mềm chặn luồng khí trong miệng
\n-	Sau đó, đẩy luồng khí thoát ra sao cho các bạn phải nghe thấy tiếng luồng khí thoát ra
\n- Không làm rung dây thanh trong cổ họng khi phát âm</string>
    <string name="vowel30">Tương tự như phụ âm /ʃ/
, khi phát âm phụ âm /ʒ/
, các bạn cần:
\n-	Để mặt lưỡi chạm vào ngay sau lợi hàm trên, nâng cả phần trước của lưỡi lên
\n-	Đẩy luồng khí thoát ra sao cho phải có tiếng luồng khí thoát ra (không mạnh bằng âm /ʃ/
)
\n- Chú ý làm rung dây thanh trong cổ họng khi phát âm
</string>
    <string name="vowel31">Khi phát âm phụ âm /tʃ/
, các bạn cần:
\n-	Nâng đầu lưỡi và mặt lưỡi chạm vào ngay sau lợi hàm trên, và nâng ngạc mềm chặn luồng khí trong miệng
\n-	Vành lưỡi chạm nhẹ vào răng ở hai bên miệng
\n-	Sau đó đẩy mạnh luồng khí thoát ra sao cho các bạn nghe thấy tiếng luồng khí thoát ra
\n- Và không làm rung dây thanh trong cổ họng khi phát âm
</string>
    <string name="vowel32">Tương tự như phụ âm /tʃ/
, khi phát âm phụ âm /dʒ/
, các bạn cần:
\n-	Nâng mặt lưỡi chạm vào ngay sau lợi hàm trên, nâng cả phần trước của lưỡi và nâng ngạc mềm chặn luồng khí trong miệng
\n-	Vành lưỡi chạm nhẹ vào răng ở hai bên miệng
\n-	Sau đó đẩy mạnh luồng khí ra sao cho các bạn nghe thấy tiếng luồng khí thoát ra
\n- Dây thanh trong cổ họng có rung
</string>
    <string name="vowel33">Khi phát âm phụ âm /f/
, các bạn cần:
\n-	Để răng hàm trên chạm nhẹ vào môi dưới, ngạc mềm nâng lên
\n-	Đẩy luồng khí thoát ra giữa hàm răng trên và môi dưới sao cho các bạn nghe thấy tiếng luồng khí thoát ra
\n-	Không làm rung dây thanh trong cổ họng khi phát âm
</string>
    <string name="vowel34">Khi phát âm phụ âm /v/
:
\n-	Các bạn để răng hàm trên chạm nhẹ vào môi dưới
\n-	Sau đó, các bạn đẩy luồng khí thoát ra giữa răng hàm trên và môi dưới sao cho các bạn nghe thấy tiếng luồng khí thoát ra nhưng không mạnh bằng âm /f/
\n-	Làm rung dây thanh trong cổ họng khi phát âm
</string>
    <string name="vowel35">Khi phát âm phụ âm /w/
:
\n-	Cần để hai môi tạo thành hình tròn nhỏ, phần sau của lưỡi nâng hướng lên ngạc mềm chặn luồng khí trong miệng
\n-	Sau đó đẩy luồng khí thoát ra
\n-	Và làm rung dây thanh trong cổ họng
</string>
    <string name="vowel36">Khi phát âm phụ âm /j/
, các bạn cần:
\n-	Nâng phần trước của lưỡi lên gần ngạc cứng
\n-	Đẩy luồng khí thoát ra giữa phần trước của lưỡi và ngạc cứng nhưng không có tiếng ma sát  của luồng khí (do khoảng cách giữa phần trước của lưỡi và ngạc cứng không quá gần)
\n-	Làm rung dây thanh trong cổ họng
</string>
    <string name="vowel37">Khi phát âm phụ âm /h/
, các bạn cần:
\n-	Nâng ngạc mềm lên cao
\n-	Sau đó đẩy luồng khí thoát ra giữa thanh môn (một khe nhỏ) trong cổ họng sao cho các bạn phải nghe thấy tiếng luồng khí thoát ra
\n- Và không làm rung dây thanh trong cổ họng khi phát âm
</string>
    <string name="vowel38">Khi phát âm phụ âm /θ/
, các bạn cần:
\n-	Đặt đầu lưỡi ở giữa hai hàm răng, ngạc mềm được nâng lên
\n-	Sau đó, đẩy luồng khí thoát ra giữa đầu lưỡi và hàm răng trên sao cho các bạn nghe được tiếng luồng khí thoát ra
\n- Và không làm rung dây thanh trong cổ họng khi phát âm
</string>
</resources>