<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.app.esd.esd.Activity.Keyboard">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="8">

        <TextView
            android:id="@+id/button1"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:background="@drawable/bg_button_keyboard"
            android:clickable="true"
            android:gravity="center"
            android:text="@string/sb_text_1" />

        <TextView
            android:id="@+id/button2"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:background="@drawable/bg_button_keyboard"
            android:clickable="true"
            android:gravity="center"
            android:text="@string/sb_text_2" />

        <TextView
            android:id="@+id/button3"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:background="@drawable/bg_button_keyboard"
            android:clickable="true"
            android:gravity="center"
            android:text="@string/sb_text_3" />

        <TextView
            android:id="@+id/button4"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:background="@drawable/bg_button_keyboard"
            android:clickable="true"
            android:gravity="center"
            android:text="@string/sb_text_4" />

        <TextView
            android:id="@+id/button5"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:background="@drawable/bg_button_keyboard"
            android:clickable="true"
            android:gravity="center"
            android:text="@string/sb_text_5" />

        <TextView
            android:id="@+id/button6"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:background="@drawable/bg_button_keyboard"
            android:clickable="true"
            android:gravity="center"
            android:text="@string/sb_text_6" />

        <TextView
            android:id="@+id/button7"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:background="@drawable/bg_button_keyboard"
            android:clickable="true"
            android:gravity="center"
            android:text="@string/sb_text_7" />

        <TextView
            android:id="@+id/button8"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:background="@drawable/bg_button_keyboard"
            android:clickable="true"
            android:gravity="center"
            android:text="@string/sb_text_8" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="8">

        <TextView
            android:id="@+id/button9"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:background="@drawable/bg_button_keyboard"
            android:clickable="true"
            android:gravity="center"
            android:text="@string/sb_text_9" />

        <TextView
            android:id="@+id/button10"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:background="@drawable/bg_button_keyboard"
            android:clickable="true"
            android:gravity="center"
            android:text="@string/sb_text_10" />

        <TextView
            android:id="@+id/button11"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:background="@drawable/bg_button_keyboard"
            android:clickable="true"
            android:gravity="center"
            android:text="@string/sb_text_11" />

        <TextView
            android:id="@+id/button12"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:background="@drawable/bg_button_keyboard"
            android:clickable="true"
            android:gravity="center"
            android:text="@string/sb_text_13" />

        <TextView
            android:id="@+id/button13"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:background="@drawable/bg_button_keyboard"
            android:clickable="true"
            android:gravity="center"
            android:text="@string/sb_text_13" />

        <TextView
            android:id="@+id/button14"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:background="@drawable/bg_button_keyboard"
            android:clickable="true"
            android:gravity="center"
            android:text="@string/sb_text_14" />

        <TextView
            android:id="@+id/button15"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:background="@drawable/bg_button_keyboard"
            android:clickable="true"
            android:gravity="center"
            android:text="@string/sb_text_15" />

        <TextView
            android:id="@+id/button16"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:background="@drawable/bg_button_keyboard"
            android:clickable="true"
            android:gravity="center"
            android:text="@string/sb_text_16" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="8">

        <TextView
            android:id="@+id/button17"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:background="@drawable/bg_button_keyboard"
            android:clickable="true"
            android:gravity="center"
            android:text="@string/sb_text_17" />

        <TextView
            android:id="@+id/button18"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:background="@drawable/bg_button_keyboard"
            android:clickable="true"
            android:gravity="center"
            android:text="@string/sb_text_18" />

        <TextView
            android:id="@+id/button19"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:background="@drawable/bg_button_keyboard"
            android:clickable="true"
            android:gravity="center"
            android:text="@string/sb_text_19" />

        <TextView
            android:id="@+id/button20"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:background="@drawable/bg_button_keyboard"
            android:clickable="true"
            android:gravity="center"
            android:text="@string/sb_text_20" />

        <TextView
            android:id="@+id/button21"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:background="@drawable/bg_button_keyboard"
            android:clickable="true"
            android:gravity="center"
            android:text="@string/sb_text_21" />

        <TextView
            android:id="@+id/button22"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:background="@drawable/bg_button_keyboard"
            android:clickable="true"
            android:gravity="center"
            android:text="@string/sb_text_22" />

        <TextView
            android:id="@+id/button23"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:background="@drawable/bg_button_keyboard"
            android:clickable="true"
            android:gravity="center"
            android:text="@string/sb_text_23" />

        <TextView
            android:id="@+id/button24"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_margin="2dp"

            android:layout_weight="1"
            android:background="@drawable/bg_button_keyboard"
            android:clickable="true"
            android:gravity="center"
            android:text="@string/sb_text_24" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="8">

        <TextView
            android:id="@+id/button25"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:background="@drawable/bg_button_keyboard"
            android:clickable="true"
            android:gravity="center"
            android:text="@string/sb_text_25" />

        <TextView
            android:id="@+id/button26"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:background="@drawable/bg_button_keyboard"
            android:clickable="true"
            android:gravity="center"
            android:text="@string/sb_text_26" />

        <TextView
            android:id="@+id/button27"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:background="@drawable/bg_button_keyboard"
            android:clickable="true"
            android:gravity="center"
            android:text="@string/sb_text_27" />

        <TextView
            android:id="@+id/button28"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:background="@drawable/bg_button_keyboard"
            android:clickable="true"
            android:gravity="center"
            android:text="@string/sb_text_28" />

        <TextView
            android:id="@+id/button29"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:background="@drawable/bg_button_keyboard"
            android:clickable="true"
            android:gravity="center"
            android:text="@string/sb_text_29" />

        <TextView
            android:id="@+id/button30"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:background="@drawable/bg_button_keyboard"
            android:clickable="true"
            android:gravity="center"
            android:text="@string/sb_text_30" />

        <TextView
            android:id="@+id/button31"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:background="@drawable/bg_button_keyboard"
            android:clickable="true"
            android:gravity="center"
            android:text="@string/sb_text_31" />

        <TextView
            android:id="@+id/button32"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:background="@drawable/bg_button_keyboard"
            android:clickable="true"
            android:gravity="center"
            android:text="@string/sb_text_32" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="8">

        <TextView
            android:id="@+id/button33"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:background="@drawable/bg_button_keyboard"
            android:clickable="true"
            android:gravity="center"
            android:text="@string/sb_text_33" />

        <TextView
            android:id="@+id/button34"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:background="@drawable/bg_button_keyboard"
            android:clickable="true"
            android:gravity="center"
            android:text="@string/sb_text_34" />

        <TextView
            android:id="@+id/button35"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:background="@drawable/bg_button_keyboard"
            android:clickable="true"
            android:gravity="center"
            android:text="@string/sb_text_35" />

        <TextView
            android:id="@+id/button36"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:background="@drawable/bg_button_keyboard"
            android:clickable="true"
            android:gravity="center"
            android:text="@string/sb_text_36" />

        <TextView
            android:id="@+id/button37"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:background="@drawable/bg_button_keyboard"
            android:clickable="true"
            android:gravity="center"
            android:text="@string/sb_text_37" />

        <TextView
            android:id="@+id/button38"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:background="@drawable/bg_button_keyboard"
            android:clickable="true"
            android:gravity="center"
            android:text="@string/sb_text_38" />

        <TextView
            android:id="@+id/button39"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:background="@drawable/bg_button_keyboard"
            android:clickable="true"
            android:gravity="center"
            android:text="@string/sb_text_39" />

        <TextView
            android:id="@+id/button40"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:background="@drawable/bg_button_keyboard"
            android:clickable="true"
            android:gravity="center"
            android:text="@string/sb_text_40" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="8">

        <TextView
            android:id="@+id/button41"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_margin="2dp"
            android:layout_weight="0.96"
            android:background="@drawable/bg_button_keyboard"
            android:clickable="true"
            android:gravity="center"
            android:text="@string/sb_text_41" />

        <TextView
            android:id="@+id/button42"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_margin="2dp"
            android:layout_weight="0.97"
            android:background="@drawable/bg_button_keyboard"
            android:clickable="true"
            android:gravity="center"
            android:text="@string/sb_text_42" />

        <TextView
            android:id="@+id/button43"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_margin="2dp"
            android:layout_weight="0.96"
            android:background="@drawable/bg_button_keyboard"
            android:clickable="true"
            android:gravity="center"
            android:text="@string/sb_text_43" />

        <TextView
            android:id="@+id/button44"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_margin="2dp"
            android:layout_weight="0.96"
            android:background="@drawable/bg_button_keyboard"
            android:clickable="true"
            android:gravity="center"
            android:text="@string/sb_text_44" />
    </LinearLayout>


</LinearLayout>
